# Time_Warp_Classic

./: .coverage  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  DOCUMENTATION_SUMMARY.txt  Dockerfile  INCOMPLETE_FEATURES.md  MYPY_TYPE_FIXES.md  PROJECT_STATUS.md  PyPI_RELEASE_CHECKLIST.txt  README.md  SETUP.md  Time_Warp.py  Time_Warp_BACKUP.py  Time_Warp_Fixed.py  Time_Warp_REPAIR.py  comprehensive_language_tests.py  pyproject.toml  pytest.ini  release_to_pypi.sh  requirements.txt  run.bat  run.py  run.sh  run_with_venv.sh  simple_spiral.logo  test_graphics.logo  test_results.json  test_results_examples.json  test_results_programs.json  timewarp  timewarp.py
.github/: copilot-instructions.md
core/: __init__.py  interpreter.py  stubs.py
docs/: CHANGELOG.md  DEMO_GAMES.md  DIRECTORY_STRUCTURE.md  FAQ.md  FEATURE_ADDITIONS_v1.3.md  GITHUB_INTEGRATION.md  INDEX.md  MODULAR_ARCHITECTURE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  README_v11.md  TECHNICAL_MANUAL.md  TROUBLESHOOTING.md  USER_MANUAL.md  VERSION_1_1_ROADMAP.md  compiler.md  interpreter.md
examples/: INDEX.bas  PROGRAMS_INDEX.md  README.md  README_BASIC.md  README_Logo.md  README_PILOT.md  analysis_results.json  menorah_logo.logo  python_data_science_demo.py  quiz_pilot.pilot  sample_python_program.py
gui/: __init__.py  app.py  dialogs.py  menus.py  themes.py
plugins/: __init__.py
scripts/: README.md  create_github_release.sh  gui_run_demo.py  install_dependencies.py  integration_tests.py  launch.py  launch_Time_Warp.sh  prepare_release.sh  run_all_examples.py  run_all_tests.py  (+11 more)
(+269 files in other folders)
